--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js --mode production",
-    "dev": "webpack --config webpack.config.js --mode development serve"
+    "dev": "webpack serve --config webpack.config.js --mode development"
   },
   "repository": {
     "type": "git",
